--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,21 @@ body {
 p {
   margin-block-end: 0.75rem;
 }
+
+.form-group {
+  margin: 16px 0;
+}
+
+/* Button that is closely associated with another element eg. refresh */
+.aux-button {
+  margin: 8px 0;
+  width: 100%;
+}
+
+.form-actions button {
+  width: 100%;
+}
+
+.input {
+  width: 100%;
+}
